force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/MSTMassEmail__EmailSourceRecordSetting__c.object-meta.xml
<CustomObject>
    <description>Used to store the settings used to dynamically retrieve the contact and lead information.</description>
    <label>MST Mass Email Setting</label>
    <nameField>
        <displayFormat>Setting-{00000}</displayFormat>
        <label>EmailSourceRecordSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MST Mass Email Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>