force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__ContactField__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__ContactField__c</fullName>
    <label>Contact Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>