force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__IdFilterEnabled__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__IdFilterEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if enabled the filtering based on the context record will be done.</description>
    <label>Search Filter Enabled</label>
    <type>Checkbox</type>
</CustomField>