force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__LeadField__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__LeadField__c</fullName>
    <label>Lead Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>