force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>