force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__SearchField__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__SearchField__c</fullName>
    <label>Search Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>