force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__SettingName__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__SettingName__c</fullName>
    <description>Name of this setting.</description>
    <label>Setting Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>