force-app/main/default/objects/MSTMassEmail__EmailSourceRecordSetting__c/fields/MSTMassEmail__SourceType__c.field-meta.xml
<CustomField>
    <fullName>MSTMassEmail__SourceType__c</fullName>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>